crates/px4/tests/trybuild/fail/unknown_arg.rs
use px4::main;

#[main(name = "foo", priority = "high")]
fn entry() {}

fn main() {}
